force-app/main/default/objects/Customer__c/fields/Firebase_UID__c.field-meta.xml
<CustomField>
    <fullName>Firebase_UID__c</fullName>
    <externalId>true</externalId>
    <label>Firebase_UID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>