force-app/main/default/objects/Customer__c/fields/Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Date__c</fullName>
    <label>Last_Order_Date</label>
    <type>Date</type>
</CustomField>