force-app/main/default/objects/Customer__c/fields/Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total_Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>