force-app/main/default/objects/Customer__c/validationRules/Active_customer_must_have_contact_info.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_customer_must_have_contact_info</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Is_Active__c = TRUE,
  ISBLANK(Phone__c),
  ISBLANK(Email__c)
)</errorConditionFormula>
    <errorMessage>Active customers must have either a Phone or Email.</errorMessage>
</ValidationRule>