force-app/main/default/objects/Customer__c/validationRules/Customers_without_contact_info.validationRule-meta.xml
<ValidationRule>
    <fullName>Customers_without_contact_info</fullName>
    <active>true</active>
    <description>Customer must have at least an Email or Phone number which is needed for Communication Purpose.</description>
    <errorConditionFormula>AND(
  Is_Active__c = TRUE,
  ISBLANK(Phone__c),
  ISBLANK(Email__c)
)</errorConditionFormula>
    <errorMessage>Customer must have at least an Email or Phone number</errorMessage>
</ValidationRule>